--- a/cvs1/src/main/resources/templates/list.html
+++ b/cvs1/src/main/resources/templates/list.html
@@ -7,7 +7,7 @@
 <body>
     <h1>아이템 리스트</h1>
     <hr>
-
+    <a href="/item/add"><button>아이템 등록</button></a>
     <table>
         <tr>
             <th>id</th>
