편의점 프로젝트 3 - 완성

--- a/cvs1/src/main/resources/templates/loginHome.html
+++ b/cvs1/src/main/resources/templates/loginHome.html
@@ -9,8 +9,8 @@
 <p><span th:text="|${member.email} 님, 환영합니다!|">로그인 사용자 이름</span></p>
 <hr>
 <a href="/item"><button>편의점 관리</button></a>
-<a href="/members/update"><button>비밀번호 변경</button></a>
-<a href="/members/delete"><button>탈퇴</button></a>
+<a href="/member/update"><button>비밀번호 변경</button></a>
+<a href="/member/delete"><button>탈퇴</button></a>
 <a href="/logout"><button>로그아웃</button></a>
 </body>
 </html>
