--- a/cvs1/src/main/resources/templates/home.html
+++ b/cvs1/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>편의점 관리 시스템</h1>
-    <a href="/members/join"><button>회원가입</button></a>
+    <a href="/member/join"><button>회원가입</button></a>
     <a href="/login"><button>로그인</button></a>
 </body>
 </html>
