--- a/cvs1/src/main/resources/templates/item/itemList.html
+++ b/cvs1/src/main/resources/templates/item/itemList.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>아이템 리스트</h1>
+    <button type="button" onclick="location.href='/'" >홈으로</button>
     <hr>
     <a href="/item/add"><button>아이템 등록</button></a>
     <table>
